[package]
name = "followfile"
version = "0.1.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT"
description = "Provides Reader library for following file changes."
homepage = "https://github.com/yamaura/followfile"
repository = "https://github.com/yamaura/followfile"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "examples/**/*.rs", "README.md", "LICENSE"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[dependencies.tokio]
optional = true
version = "1.37.0"
features = ["time"]

[features]
tail = ["tokio/macros", "tokio/rt", "tokio/fs", "tokio/io-util"]

[[example]]
name = "tail"
required-features = ["tail"]

